<resources>
    <string name="app_name">Todo List</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="incomplete_tasks">Incomplete Tasks</string>
    <string name="time_to_complete">Time To Complete</string>
    <string name="task_description">Task Description</string>
    <string name="view_more">View More</string>
    <string name="database_error">There was an error getting data from the database.</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="edit_task">Edit Task</string>
    <string name="task_name">Task Name</string>
    <string name="scheduled_date">Scheduled Date</string>
    <string name="marked_task_as_incomplete">Marked task as incomplete.</string>
    <string name="marked_task_as_complete">Marked task as complete.</string>
    <string name="no_incomplete_tasks_yet">You don\'t have any incomplete tasks yet. Add one?</string>
    <string name="no_completed_tasks_yet">You don\'t have any completed tasks yet. \nMark tasks as complete to see how well you\'re doing!</string>
    <string name="completed_on">Completed on</string>
</resources>
