<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.darrenfinch.todolist.view.helpers.DatabindingUtil"/>
        <variable
            name="viewModel"
            type="com.darrenfinch.todolist.viewmodel.EditTaskViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor"
        tools:context=".view.fragments.EditTaskFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/materialToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/PrimaryToolbar"
                app:title="@string/edit_task"
                app:navigationIcon="@drawable/ic_arrow_back" />

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/taskNameTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/standard_margin"
            android:hint="@string/task_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/taskNameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={viewModel.observableTask.name}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/taskDescriptionTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/standard_margin"
            android:hint="@string/task_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskNameTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/taskDescriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={viewModel.observableTask.description}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/standard_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskDescriptionTextInputLayout">

            <TextView
                android:id="@+id/scheduledDateLabel"
                style="@style/H4Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/standard_padding"
                android:text="@string/scheduled_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/scheduledDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginEnd="@dimen/standard_margin"
                android:text="@{DatabindingUtil.INSTANCE.dateStringFromLong(viewModel.observableTask.scheduledDate)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="5/21/20" />

            <TextView
                android:id="@+id/timeToCompleteLabel"
                style="@style/H4Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/standard_padding"
                android:text="@string/time_to_complete"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scheduledDateLabel" />

            <TextView
                android:id="@+id/timeToComplete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/standard_margin"
                android:layout_marginEnd="@dimen/standard_margin"
                android:text="@{DatabindingUtil.INSTANCE.putTogetherTimeAndUnit(viewModel.observableTask.estimatedTTC, viewModel.observableTask.estimatedTTCUnit)}"
                app:layout_constraintBottom_toBottomOf="@+id/timeToCompleteLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/timeToCompleteLabel"
                tools:text="1 hr" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
